--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "highlight.js": "^9.15.6",
     "morgan": "^1.9.1",
@@ -22,7 +23,7 @@
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
   },
-  "engines":{
+  "engines": {
     "node": "10.16.2"
   },
   "devDependencies": {},
